updated contents of my_page.html

--- a/my_page.html
+++ b/my_page.html
@@ -28,8 +28,8 @@
     </nav>
 
     <div class="container">
-        <h1>My Page</h1>
-        <h3>Your Name</h3>
-        <p>My name is NAME HERE! Here's some stuff about me...</p>
+        <h1>My Page!</h1>
+        <h3>Ivan!</h3>
+        <p>My name is Ivan! Here's some stuff about me...</p>
     </div>
 </body>
