--- a/my_page.html
+++ b/my_page.html
@@ -28,7 +28,7 @@
     </nav>
 
     <div class="container">
-        <h1>My Page!</h1>
+        <h1>Ivan's Page!</h1>
         <h3>Ivan!</h3>
         <p>My name is Ivan! Here's some stuff about me...</p>
     </div>
